...
            icon: const Icon(FluentIcons.search),
            title: const Text('搜索'),
            body: const SearchScreenWin(),
          ),
          PaneItem(
            icon: const Icon(FluentIcons.contact),
            title: const Text('我的'),
            body: const SettingsScreenWin(),
          ),
        ],
        footerItems: [
          PaneItemSeparator(),
          PaneItemAction(
            icon: const Icon(FluentIcons.lock),
            title: const Text('锁定'),
            onTap: () => context.read<AuthService>().lock(),
          ),
        ],
      ),
    );
  }
...
